--- a/第三章.常用的70余个命令.md
+++ b/第三章.常用的70余个命令.md
@@ -1,1 +1,171 @@
+# 常用linux命令汇总
+## 1.pwd显示当前目录
+```shell
+[centos@192 ~]$ pwd
+/home/centos
+```
+## 2.ls [选项] 【目录】
+```shell
+列出目录中的文件和子文件
+ls -l   显示详细信息
+ls -al 显示所有包括-隐藏目录信息
+[centos@192 ~]$ ls -al
+总用量 28
+drwx------. 15 centos centos 4096 12月 26 13:47 .
+drwxr-xr-x.  3 root   root     20 12月 26 13:47 ..
+-rw-r--r--.  1 centos centos   18 4月   1 2020 .bash_logout
+-rw-r--r--.  1 centos centos  193 4月   1 2020 .bash_profile
+-rw-r--r--.  1 centos centos  231 4月   1 2020 .bashrc
+drwx------. 14 centos centos 4096 12月 26 13:48 .cache
+drwxr-xr-x. 14 centos centos  261 12月 26 13:48 .config
+drwx------.  3 centos centos   25 12月 26 13:47 .dbus
+-rw-------.  1 centos centos   16 12月 26 13:47 .esd_auth
+-rw-------.  1 centos centos  310 12月 26 13:47 .ICEauthority
+drwx------.  3 centos centos   19 12月 26 13:47 .local
+drwxr-xr-x.  4 centos centos   39 12月 26 13:23 .mozilla
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 公共
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 模板
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 视频
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 图片
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 文档
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 下载
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 音乐
+drwxr-xr-x.  2 centos centos    6 12月 26 13:47 桌面
+```
+## 3.cd 切换目录
+```shell
+ 进入指定目录，若无参数则返回家目录
+cd-返回上一次目录
+cd .. 返回上一级目录
+cd~返回家目录
+[centos@192 桌面]$ ls -al
+总用量 4
+drwxr-xr-x.  3 centos centos   18 12月 30 16:09 .
+drwx------. 15 centos centos 4096 12月 30 16:00 ..
+drwxrwxr-x.  2 centos centos    6 12月 30 16:09 test
+[centos@192 桌面]$ cd test
+[centos@192 test]$ pwd
+/home/centos/桌面/test
+```
+## 4.clear清屏操作
+## 5.mkdir 创建目录
+```shell
+[centos@192 桌面]$ mkdir test1
+[centos@192 桌面]$ ls
+test  test1
+```
+## 6.cp【源文件】【目的地址】 复制文件
+```shell
+[centos@192 test]$ touch file1.txt
+[centos@192 test]$ ls
+file1.txt
+[centos@192 test]$ cp file1.txt ../test1/
+[centos@192 test]$ cd ..
+[centos@192 桌面]$ cd test1
+[centos@192 test1]$ ls
+file1.txt
+
+[centos@192 test1]$ clear
+[centos@192 test1]$ #复制文件file1为file1copy
+[centos@192 test1]$ ls
+file1.txt
+[centos@192 test1]$ cp file1.txt file1copy.txt
+[centos@192 test1]$ ls
+file1copy.txt  file1.txt
+
+[centos@192 test1]$ #复制整个文件夹
+[centos@192 test1]$ pwd
+/home/centos/桌面/test1
+[centos@192 test1]$ cd ..
+[centos@192 桌面]$ ls
+test  test1
+[centos@192 桌面]$ cp -r test test2
+[centos@192 桌面]$ ls
+test  test1  test2
+```
+## 8.mv 迁移加改名
+### mv 【源文件】【目的位置】
+```shell
+[centos@192 桌面]$ ls
+test  test1  test2
+[centos@192 桌面]$ cd test
+[centos@192 test]$ ls
+file1.txt
+[centos@192 test]$ mv file1.txt ../test2/
+[centos@192 test]$ ls
+[centos@192 test]$ cd ../test2
+[centos@192 test2]$ ls
+file1.txt
+[centos@192 test2]$ 
+```
+### mv 旧文件名 新文件名
+```shell
+[centos@192 test]$ cd ../test2
+[centos@192 test2]$ ls
+file1.txt
+[centos@192 test2]$ mv file1.txt Newfile1.txt
+[centos@192 test2]$ ls
+Newfile1.txt
+[centos@192 test2]$ 
+```
+### mv 文件 目录/新名字
+```shell
+[centos@192 test2]$ mv Newfile1.txt ../test/MNfile1.txt
+[centos@192 test2]$ cd ../test
+[centos@192 test]$ ls
+MNfile1.txt
+```
+## rm 删除操作
+### rm 文件名
+```shell
+[centos@192 test]$ ls
+MNfile1.txt
+[centos@192 test]$ rm MNfile1.txt
+[centos@192 test]$ ls
+[centos@192 test]$ 
+```
+### rm -r 目录名  或是  rmdir 目录名
+```shell
+[centos@192 桌面]$ ls
+test  test1  test2
+[centos@192 桌面]$ rm -r test2
+[centos@192 桌面]$ ls
+test  test1
+```
+### 切记不要使用-fr操作！！！
+
+## 10.cat查看内容操作
+```shell
+[centos@192 桌面]$ cd test
+[centos@192 test]$ ls
+[centos@192 test]$ echo "文件一是123456" >file1.txt
+[centos@192 test]$ echo "文件二是654321" >file2.txt
+[centos@192 test]$ ls
+file1.txt  file2.txt
+[centos@192 test]$ cat file1.txt
+文件一是123456
+[centos@192 test]$ cat file2.txt
+文件二是654321
+[centos@192 test]$ cat file1.txt file2.txt >combined.txt
+[centos@192 test]$ ls
+combined.txt  file1.txt  file2.txt
+[centos@192 test]$ cat combined.txt
+文件一是123456
+文件二是654321
+```
+## 11.less 或是  more
+### more 逐一查看 less 翻页查看（less更加灵活好用）
+
+## 12.head tail查看文件内容的前几行或后几行
+### head -n 5 file1.txt  (查看前五行)
+### tail -f file.txt (动态显示更新内容)
+
+
+
+
+
+
+
+
+
 
