--- a/第三章.常用的70余个命令.md
+++ b/第三章.常用的70余个命令.md
@@ -159,6 +159,89 @@ combined.txt  file1.txt  file2.txt
 ## 12.head tail查看文件内容的前几行或后几行
 ### head -n 5 file1.txt  (查看前五行)
 ### tail -f file.txt (动态显示更新内容)
+## 13.grep [选项] "关键词" 【目录/文件】 文本搜索助手
+### 常用操作查找文件中包含“123”的行
+```shell
+[centos@localhost test1]$ cd ../test
+[centos@localhost test]$ ls
+combined.txt  file1.txt  file2.txt
+[centos@localhost test]$ #查找包含123的行
+[centos@localhost test]$ grep "123" file1.txt
+文件一是123456
+[centos@localhost test]$ grep "654" file1.txt
+[centos@localhost test]$ grep "654" file2.txt
+文件二是654321
+[centos@localhost test]$ #显示匹配的行号
+[centos@localhost test]$ grep -n "654" combined.txt
+2:文件二是654321
+[centos@localhost test]$ #递归搜索目录下所有文件
+
+```
+>参数：-i忽略大小写 -n 显示行号  -c 统计行数  -r 递归搜索
+
+## find 【搜索路径】 【条件】 【操作】
+```shell
+[centos@localhost 桌面]$ ls
+test  test1
+[centos@localhost 桌面]$ cd test
+[centos@localhost test]$ ls
+combined.txt  file1.txt  file2.txt
+[centos@localhost test]$ pwd
+/home/centos/桌面/test
+[centos@localhost test]$ find -name "file1.txt"
+./file1.txt
+[centos@localhost test]$ find /home/centos/桌面/test -iname "*le*"
+/home/centos/桌面/test/file1.txt
+/home/centos/桌面/test/file2.txt
+[centos@localhost test]$ find -type d
+.
+[centos@localhost test]$ find -mtime -7
+.
+./file1.txt
+./file2.txt
+./combined.txt
+[centos@localhost test]$ find -name "*.txt" -exec rm {} \;
+```
+> -name 匹配名字 -mtime 匹配时间 -exec 执行操作
+-size 精确大小 -type 筛选类型 d是目录，f是文件
+
+##15.sed 【选项】 "命令" 文件（用于查找替换）
+```shell
+[centos@localhost test]$ cat filetest.txt
+qwertyuiopasdfghjklzxcvbnmesztfdcxuhvpokm
+[centos@localhost test]$ #将“q”替换成“123”
+[centos@localhost test]$ sed 's/q/123/g' filetest.txt
+123wertyuiopasdfghjklzxcvbnmesztfdcxuhvpokm
+[centos@localhost test]$ #加-i直接修改文件
+[centos@localhost test]$ sed 's/q/123/g' filetest.txt
+123wertyuiopasdfghjklzxcvbnmesztfdcxuhvpokm
+[centos@localhost test]$ sed 's/q/123/g' filetest.txt
+123wertyuiopasdfghjklzxcvbnmesztfdcxuhvpokm
+[centos@localhost test]$ cat filetest.txt
+123wertyuiopasdfghjklzxcvbnmesztfdcxuhvpokm
+[centos@localhost test]$ sed 's/$/ 999/' filetest.txt
+123wertyuiopasdfghjklzxcvbnmesztfdcxuhvpokm 999
+[centos@localhost test]$ sed '/wer/d' filetest.txt
+```
+>s/old/new/g:替换
+>-i :直接修改文件内容
+>/内容/d:删除匹配行
+>s/$/ 内容/：在每行后添加内容
+
+## awk '条件 {动作} ' 文件（用于文本分析）
+### awk '{print $1,$3}' test.txt(打印1，3列)
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
