--- a/第三章.常用的70余个命令.md
+++ b/第三章.常用的70余个命令.md
@@ -231,6 +231,650 @@ qwertyuiopasdfghjklzxcvbnmesztfdcxuhvpokm
 ## awk '条件 {动作} ' 文件（用于文本分析）
 ### awk '{print $1,$3}' test.txt(打印1，3列)
 
+## WC （统计行数）
+### -l参数：统计行数 -w参数：统计单词
+```shell
+[centos@localhost 桌面]$ cd test
+[centos@localhost test]$ ls
+filetest.txt  test.txt
+[centos@localhost test]$ wc -l filetest.txt
+1 filetest.txt
+[centos@localhost test]$ wc -w filetest.txt
+1 filetest.txt
+```
+## 18.chmod修改文件权限
+### chmod 【选项】 权限 文件
+```shell
+读为4，写为2，执行为1
+filetest.txt  test.txt
+[centos@localhost test]$ chmod 755 test.txt
+[centos@localhost test]$ ls
+filetest.txt  test.txt
+
+chmod u=rwx,g=rx,o=  test.file
+```
+## 19.chown 修改文件所有者
+###sudo chown 【选项】 用户名：组名 文件
+```shell
+[centos@localhost test]$ sudo chown centos test.txt
+
+我们信任您已经从系统管理员那里了解了日常注意事项。
+总结起来无外乎这三点：
+
+    #1) 尊重别人的隐私。
+    #2) 输入前要先考虑(后果和风险)。
+    #3) 权力越大，责任越大。
+
+[sudo] centos 的密码：
+```
+## 20.chgrp 修改文件所属组
+## 21.sudo命令
+## 22.adduser 添加用户
+## 23.deluser 删除用户
+## 24.sudo passwd 用户名（修改密码）
+## 25.id / id 用户名（查看指定用户信息）
+## 26.whoami/who/w 谁在线
+## 27.tar：打包与解包
+### tar -czvf filezip.tar.gz file1 file2(把file1和2打包成一个文件) -z可以压缩更小的gzip格式
+### tar -xzcf filezip.tar.gz
+
+## 28.zip / unzip 
+## 29.gzip -k 文件（保留源文件）
+## 30.mount 挂载设备
+### sudo mount /dev/sdb1 /mnt（设备路径和挂载点）
+### unmount /mnt
+
+## 31.fsck检查文件分区修复
+```shell
+ 1. 检查并修复分区
+sudo fsck /dev/sda1
+ 2. 强制检查，即使文件系统被认为是干净的
+sudo fsck -f /dev/sda1
+ 3. 仅检查问题，不进行修复（安全查看用）
+sudo fsck -n /dev/sda1
+ 4. 自动修复所有问题，不需要逐一确认
+sudo fsck -y /dev/sda1
+```
+## 32.lsblk：查看磁盘及分区信息
+```shell
+[centos@localhost test]$ lsblk -a
+NAME            MAJ:MIN RM  SIZE RO TYPE MOUNTPOINT
+sda               8:0    0   80G  0 disk 
+├─sda1            8:1    0    1G  0 part /boot
+└─sda2            8:2    0   79G  0 part 
+  ├─centos-root 253:0    0   50G  0 lvm  /
+  ├─centos-swap 253:1    0  3.9G  0 lvm  [SWAP]
+  └─centos-home 253:2    0 25.1G  0 lvm  /home
+sr0              11:0    1 1024M  0 rom  
+```
+## 33.hostname
+```C
+# 1. 查看主机名
+hostname
+ 
+# 2. 临时设置主机名（重启后失效）
+sudo hostname new-hostname
+ 
+# 3. 永久设置主机名
+sudo hostnamectl set-hostname new-hostname
+```
+## 34.uname显示系统信息
+```c
+[centos@localhost test]$ uname -a
+Linux localhost.localdomain 3.10.0-1160.el7.x86_64 #1 SMP Mon Oct 19 16:18:59 UTC 2020 x86_64 x86_64 x86_64 GNU/Linux
+[centos@localhost test]$ 
+# 1. 查看系统的基本信息
+uname
+ 
+# 2. 查看详细系统信息（内核版本、架构等）
+uname -a
+ 
+# 3. 查看内核名称（如 Linux）
+uname -s
+ 
+# 4. 查看内核版本
+uname -r
+ 
+# 5. 查看系统架构（如 x86_64）
+uname -m
+```
+
+## 35.top查看资源占有情况
+## 36.ps查看进程
+```c
+# 1. 查看所有进程（标准输出）
+ps aux
+ 
+# 2. 搜索特定进程，结合 grep，快速定位特定进程。
+ps aux | grep 进程名
+```
+## 37.kill pid杀死进程
+## 38.free 查看内存使用情况
+```c
+# 1. 查看所有进程（标准输出）
+ps aux
+ 
+# 2. 搜索特定进程，结合 grep，快速定位特定进程。
+ps aux | grep 进程名
+
+[centos@localhost test]$ free -h
+              total        used        free      shared  buff/cache   available
+Mem:           3.7G        1.0G        1.6G         17M        1.0G        2.4G
+Swap:          3.9G          0B        3.9G
+
+```
+
+## 39.df/du 查看磁盘使用情况
+```c
+[centos@localhost test]$ df
+文件系统                   1K-块    已用     可用 已用% 挂载点
+devtmpfs                 1913612       0  1913612    0% /dev
+tmpfs                    1930644       0  1930644    0% /dev/shm
+tmpfs                    1930644   13388  1917256    1% /run
+tmpfs                    1930644       0  1930644    0% /sys/fs/cgroup
+/dev/mapper/centos-root 52403200 4299356 48103844    9% /
+/dev/sda1                1038336  189052   849284   19% /boot
+/dev/mapper/centos-home 26324420   39268 26285152    1% /home
+tmpfs                     386132      48   386084    1% /run/user/1000
+[centos@localhost test]$ 
+
+
+# 1. 查看当前目录下每个文件和子目录的大小
+du
+ 
+# 2. 以人类可读格式显示文件和目录大小
+du -h
+ 
+# 3. 查看当前目录的总大小
+du -sh
+ 
+# 4. 显示指定目录下每个文件的大小
+du -h /path/to/directory
+```
+## 40.ping测试网络连接
+```c
+# 1. 测试目标地址的连通性（默认持续发送数据包）
+ping www.google.com  -- 这个最常用
+ 
+# 2. 指定发送的次数（比如发送 5 次）
+ping -c 5 www.google.com
+ 
+# 3. 限制每次发送数据包的间隔时间（1 秒间隔）
+ping -i 1 www.google.com
+ 
+# 4. 调整数据包大小（默认 56 字节）
+ping -s 128 www.google.com
+ 
+# 5. 不解析 IP 对应的主机名（加速测试）
+ping -n www.google.com
+```
+
+## 41.traceroute：路由追踪工具
+### traceroute [选项] 目标地址
+```c
+# 1. 追踪到目标主机的路由节点，显示数据包到目标主机的所有中间节点地址及响应时间。
+traceroute example.com  -- 这个最常用
+ 
+# 2. 限制显示的最大跳数（默认是 30）
+traceroute -m 20 example.com
+ 
+# 3. 指定每跳的探测次数（默认是 3 次）
+traceroute -q 1 example.com
+ 
+# 4. 使用 ICMP 协议代替 UDP 进行路由追踪（部分网络更友好）
+traceroute -I example.com
+ 
+# 5. 使用指定端口进行路由追踪
+traceroute -p 443 example.com
+```
+## 42.wget 文件下载工具
+```c
+# 1. 下载单个文件
+wget http://example.com/file.zip
+ 
+# 2. 下载并保存为指定文件名
+wget -O newname.zip http://example.com/file.zip
+ 
+# 3. 断点续传未完成的下载
+wget -c http://example.com/largefile.zip
+ 
+# 4. 下载需要认证的文件（提供用户名和密码）
+wget --user=username --password=password http://example.com/securefile.zip
+ 
+# 5. 限制下载速度（每秒 100KB）
+wget --limit-rate=100k http://example.com/largefile.zip
+
+
+
+    单个文件下载： 用 wget URL 简单高效。
+
+    断点续传： 用 -c 续传未完成的文件下载。
+
+    下载限制： 用 --limit-rate 控制下载速度。
+
+```
+
+## 43.curl下载
+```c
+# 1. 下载文件
+curl -O http://example.com/file.zip
+ 
+# 2. 保存文件为指定名称
+curl -o newname.zip http://example.com/file.zip
+ 
+# 3. 查看网页内容
+curl http://example.com
+ 
+# 4. 调用接口（GET 请求）
+curl -X GET http://api.example.com/data   # -X：指定请求方法（GET、POST、DELETE 等）
+ 
+# 5. 调用接口（POST 请求并发送数据）
+curl -X POST -d "key=value" http://api.example.com/data
+ 
+# 6. 显示详细的请求和响应过程
+curl -v http://example.com
+```
+
+## 44.telnet 是否联通
+```c
+    测试服务器的特定服务是否正常运行。
+
+    检查防火墙是否阻止了指定端口。
+```
+
+## 45.netstat 网络连接状态
+```c
+# 1. 查看所有网络连接
+netstat -a
+ 
+# 2. 查看监听的 TCP 和 UDP 端口
+netstat -nlptu
+# -t：仅显示 TCP 连接。
+# -l：仅显示正在监听的端口。
+# -n：以数字格式显示地址和端口。
+# -p：显示占用端口的进程。
+# -u：仅显示 UDP 连接
+ 
+# 3. 查看指定端口的连接情况（结合 grep 筛选）
+netstat -tlnp | grep :80    # 这种非常常用！！
+ 
+# 4. 通过进程名，筛选出由特定程序或服务占用的连接(也常用！)
+netstat -tlnp | grep nginx    # 查看 Nginx 占用的连接
+ 
+# 5.筛选出特定连接状态（例如 LISTEN 或 ESTABLISHED）：
+netstat -tlnp | grep LISTEN       # 查看所有监听的端口
+netstat -tlnp | grep ESTABLISHED  # 查看所有已建立的连接
+
+[centos@localhost test]$ netstat -tlnp | grep LISTEN
+(Not all processes could be identified, non-owned process info
+ will not be shown, you would have to be root to see it all.)
+tcp        0      0 0.0.0.0:22              0.0.0.0:*               LISTEN      -                   
+tcp        0      0 127.0.0.1:631           0.0.0.0:*               LISTEN      -                   
+tcp        0      0 127.0.0.1:25            0.0.0.0:*               LISTEN      -                   
+tcp        0      0 127.0.0.1:6010          0.0.0.0:*               LISTEN      -                   
+tcp        0      0 0.0.0.0:111             0.0.0.0:*               LISTEN      -                   
+tcp        0      0 192.168.122.1:53        0.0.0.0:*               LISTEN      -                   
+tcp6       0      0 :::22                   :::*                    LISTEN      -                   
+tcp6       0      0 ::1:631                 :::*                    LISTEN      -                   
+tcp6       0      0 ::1:25                  :::*                    LISTEN      -                   
+tcp6       0      0 ::1:6010                :::*                    LISTEN      -                   
+tcp6       0      0 :::111                  :::*                    LISTEN      -
+```
+## ss更快的查看
+```c
+# ss 常用操作示例：
+ 
+# 1. 显示所有网络连接
+ss -a
+ 
+# 2. 显示所有监听的 TCP 和 UDP 端口
+ss -nlptu
+# -t：仅显示 TCP 连接
+# -u：仅显示 UDP 连接
+# -l：仅显示监听连接
+# -n：不解析主机名和服务名称，显示数字地址和端口号（加速）。
+# -p：显示占用端口的进程。
+ 
+ 
+# 3. 查看 ESTABLISHED 状态的连接
+ss -t state established
+ 
+# 4. 查看指定端口的连接（结合 grep 过滤）
+ss -tlnp | grep :80  # 按端口号过滤
+ 
+# 5. 查看所有包含某个 IP 地址的连接
+ss -tlnp | grep '192.168.1.100'  # 按 IP 地址过滤
+ 
+# 7. 查看某个进程（根据 PID）
+ss -tulnp | grep '1234'  # 根据进程 ID (PID) 过滤
+ 
+# 8. 查看某个协议类型的连接
+ss -tuln | grep 'tcp'  # 按协议类型（如 tcp）过滤
+ 
+# 9. 查看网络连接的具体服务
+ss -tulnp | grep 'nginx'  # 根据服务名称过滤（例如：nginx）
+```
+
+## tcpdump 抓包分析
+```c
+# tcpdump 常用选项:
+# -i：指定监听的网络接口（如 eth0）。
+# -w：将捕获的数据包保存到文件（如 capture.pcap）。
+# -r：从文件中读取并解析数据包（如读取保存的 pcap 文件）。
+# -n：不解析主机名和服务名称，直接显示 IP 和端口号。
+# -nn：同时禁用主机名和端口解析，显示数字地址和端口号。
+# -c：限制捕获的数据包数量（如 -c 10 表示捕获 10 个包后退出）。
+# -X：显示数据包的十六进制和 ASCII 内容。
+# -A：以 ASCII 格式显示数据包内容（适合查看 HTTP 数据）。
+# -v：显示数据包的详细信息
+ 
+# 1. 捕获指定接口上的所有数据包
+tcpdump -i eth0
+ 
+# 2. 捕获并保存数据包到文件
+tcpdump -i eth0 -w capture.pcap
+ 
+# 3. 捕获来自特定 IP 的数据包
+tcpdump -i eth0 src 192.168.1.100
+ 
+# 4. 捕获目标 IP 的数据包
+tcpdump -i eth0 dst 192.168.1.200
+ 
+# 5. 捕获特定端口（如 80）上的流量
+tcpdump -i eth0 port 80
+ 
+# 6. 捕获来自特定源 IP 且目标端口为 80 的数据包，并保存到文件 capture.pcap 里
+tcpdump -i eth0 src 192.168.1.100 and dst port 80 -w capture.pcap -nn -v # 比较常用!
+```
+## 48.nc 网络瑞士军刀
+```c
+# nc 常用选项：
+# -l     ：监听模式，用于在本地创建服务器，等待客户端连接。
+# -z     ：扫描模式，检查端口是否开放，不发送任何数据。
+# -v     ：启用详细模式，输出更多的调试信息。
+# -u     ：使用 UDP 协议进行连接，而不是默认的 TCP。
+# -p     ：指定源端口。
+# -w     ：设置超时时间，单位为秒。
+# -n     ：禁用 DNS 解析，直接使用 IP 地址，而不是域名。
+# -v     ：详细输出，显示连接过程中的所有信息。
+ 
+ 
+# 1. 连接到远程主机的指定端口（TCP连接）
+nc example.com 80
+ 
+# 2. 监听本地端口（创建服务器，等待连接）
+nc -l 12345
+ 
+# 3. 通过 netcat 发送文件到远程主机
+# 在远程机器上执行：nc -l 12345 > received_file.txt
+# 在本地机器上执行：nc remote_host 12345 < file_to_send.txt
+ 
+# 4. 使用 UDP 协议发送数据
+nc -u -l 12345  # 监听 UDP 端口 12345
+nc -u remote_host 12345  # 发送数据到指定 UDP 端口
+ 
+# 5. 测试端口是否开放（可以用来检查某些端口是否能够连接）
+nc -zv example.com 80 443
+ 
+# 6. 扫描端口范围（测试哪些端口开放）
+nc -zv example.com 1-1000
+ 
+# 7. 通过 nc 实现简易的端到端聊天
+# 在一台机器上执行：nc -l 12345
+# 在另一台机器上执行：nc localhost 12345
+# 然后你就可以发送消息了
+ 
+# 8. 创建一个简单的 HTTP 请求
+echo -e "GET / HTTP/1.1\r\nHost: example.com\r\n\r\n" | nc example.com 80
+ 
+# 9. 发送数据并接收响应
+echo "Hello, World!" | nc example.com 80
+```
+
+## 49.lsof 查看文件占领
+```c
+# 查看所有网络连接
+lsof -i
+ 
+# 查看特定端口的占用情况
+lsof -i :80
+ 
+# 显示详细网络连接（数字端口和 IP 地址）
+lsof -Pni
+ 
+# 显示被特定端口（如 80）占用的进程及其详细信息。
+lsof -Pni :80
+ 
+# 结合 grep 筛选出监听状态的端口
+lsof -Pni | grep LISTEN
+ 
+# 筛选出与某个 IP 地址相关的连接（本地或远程）
+lsof -Pni | grep 192.168.1.100
+ 
+# 查找指定进程的网络连接，PID代表进程号
+lsof -Pni | grep <PID>
+```
+## 50.ip查看和网络配置
+```c
+# 1. 查看网络接口信息（类似 ifconfig）
+ip addr show
+ 
+# 2. 查看路由表
+ip route show
+ 
+# 3. 启用网络接口
+sudo ip link set eth0 up
+ 
+# 4. 禁用网络接口
+sudo ip link set eth0 down
+```
+## 51.ssh
+```c
+# 1. 登录远程主机
+ssh user@remote_host       # remote_host 代表目标 ip，user 代表用户名
+ 
+# 2. 指定端口登录,使用 -p 参数
+ssh -p 2222 user@remote_host
+ 
+# 3. 使用指定私钥文件登录
+ssh -i /path/to/private_key user@remote_host
+ 
+# 4. 执行远程命令后退出 
+ssh user@remote_host "ls -l /home"
+```
+
+## 52.scp远程传输
+```c
+# 1. 从本地传文件到远程
+scp file.txt username@remote_host:/path/to/destination
+ 
+# 2. 从远程下载文件到本地
+scp username@remote_host:/path/to/file.txt /local/path/
+ 
+# 3. 传输整个目录（加 -r 参数 : 递归传输目录）
+scp -r /local/folder username@remote_host:/remote/folder
+ 
+# 4. -P：指定远程主机的 SSH 端口（默认 22）
+scp -P 8000 file.txt username@remote_host:/remote/path
+```
+## 53.rsync同步目录
+```c
+# rsync常用选项参数:
+# -a：归档模式，保留文件权限、时间戳等信息。
+# -v：显示详细信息。
+# --delete：删除目标中源目录不存在的文件。
+# -e：指定远程传输方式（如 SSH）。
+ 
+# 1. 同步本地目录到远程
+rsync -av /local/dir username@remote_host:/remote/dir
+ 
+# 2. 从远程目录同步到本地
+rsync -av username@remote_host:/remote/dir /local/dir
+ 
+# 3. 同步时删除目标中多余的文件
+rsync -av --delete /local/dir username@remote_host:/remote/dir
+ 
+# 4. 使用 SSH 指定端口
+rsync -av -e "ssh -p 2222" /local/dir username@remote_host:/remote/dir
+```
+
+## 54. strace：系统调用调试工具
+```c
+# 1. 跟踪一个命令的系统调用
+strace ls
+ 
+# 2. 将跟踪输出保存到文件
+strace -o trace.log ls
+ 
+# 3. 仅跟踪文件相关的系统调用
+strace -e trace=file ls
+ 
+# 4. 跟踪指定进程的系统调用， PID代表进程号
+strace -p <PID>
+ 
+# 5. 显示系统调用的时间消耗
+strace -T ls
+
+    -o 文件名：将输出保存到文件。
+
+    -e trace=file：仅跟踪文件相关的调用（如 open、read 等）。
+
+    -p PID：跟踪已有进程。
+
+    -T：显示每个系统调用的耗时。
+
+小总结：
+
+    跟踪命令： 用 strace 命令 观察其行为。
+
+    跟踪进程： 用 -p PID 查看运行中的程序调用。
+```
+## 55.iostat查看i/o或cpu性能
+```c
+# 1. 查看 CPU 和磁盘 I/O 使用情况
+iostat
+ 
+# 2. 持续监控，每 2 秒刷新一次，共显示 5 次
+iostat 2 5
+ 
+# 3. 显示设备的详细 I/O 信息
+iostat -d
+ 
+# 4. 显示 CPU 的详细使用情况
+iostat -c
+ 
+# 5. 显示所有设备的完整统计信息
+iostat -x
+```
+## 56.vmstat系统资源快照
+```c
+# 1. 查看一次系统性能快照
+vmstat
+ 
+# 2. 持续监控，每秒刷新一次，共显示 5 次
+vmstat 1 5
+ 
+# 3. 显示内存、I/O、CPU 和系统状态
+vmstat -a
+ 
+# 4. 显示磁盘块 I/O 信息
+vmstat -d
+ 
+# 5. 显示更详细的 CPU 使用统计
+vmstat -t
+```
+## 57.dmesg -w：动态查看内核日志
+## 58.journalctl万能日志查看器
+```c
+# 1. 查看所有日志
+journalctl
+ 
+# 2. 查看特定服务的日志
+journalctl -u 服务名
+ 
+# 比如查看 nginx 服务的日志
+journalctl -u nginx
+ 
+# 3. 实时查看日志更新
+journalctl -f
+ 
+# 4. 查看最近一小时的日志
+journalctl --since "1 hour ago"
+```
+## 59.uptime：这台机跑多久了？
+## 60.htop：交互式资源监控工具
+## 61.xargs：批量操作的好帮手
+```c
+# 1. 删除匹配的文件（结合 find 使用）
+find . -name "*.log" | xargs rm -f
+ 
+# 2. 将列表中的文件名批量传递给 echo
+echo "file1 file2 file3" | xargs echo
+ 
+# 3. 控制每行传递的参数数量（每次处理 1 个）
+echo "file1 file2 file3" | xargs -n 1 echo
+ 
+# 4. 配合 -I 替换参数（灵活处理每个输入）
+echo "file1 file2 file3" | xargs -I {} mv {} /backup
+ 
+# 5. 并行执行命令（加速批量处理）
+find . -name "*.jpg" | xargs -P 4 cp -t /backup
+
+    | xargs：将前一个命令的输出传递给后续命令。
+
+    -n：每次传递的参数数量。
+
+    -I {}：用 {} 表示输入的每个参数。
+
+    -P：指定并行执行的任务数。
+
+小总结：
+
+    批量删除： 结合 find 和 xargs rm。
+
+    参数替换： 用 -I {} 灵活指定处理逻辑。
+
+    并行加速： 用 -P 提高效率。
+```
+## 62. tee：数据双向输出工具
+```c
+# 1. 将命令的输出保存到文件，同时显示在终端
+ls -l | tee output.txt
+ 
+# 2. 追加到文件（不覆盖原文件内容）
+ls -l | tee -a output.txt
+ 
+# 3. 将命令输出保存到多个文件
+ls -l | tee file1.txt file2.txt
+ 
+# 4. 将错误输出（stderr）也保存到文件
+ls nonexistentfile 2>&1 | tee errors.log
+
+     tee 文件：将命令的标准输出保存到指定文件。
+
+    -a：追加模式，不覆盖已有文件内容。
+
+    2>&1：重定向错误输出到标准输出，便于保存日志。
+
+小总结：
+
+    保存日志： 用 tee 保存输出日志并实时查看。
+
+    追加内容： 用 -a 确保不覆盖原文件。
+
+    错误捕获： 用 2>&1 保存所有输出（标准和错误）。
+```
+
+
+
+
+
+
+
+
+
+
+
 
 
 
